added icons and info to contact section, fixed friends section

--- a/index.html
+++ b/index.html
@@ -944,7 +944,7 @@
                         <h2 class="section__heading">Naši prijatelji</h2>
                     </div>
                 </div>
-                <div class="col-sm-3 col-xs-12 text-center">
+                <div class="col-md-3 col-sm-4 col-xs-12 text-center">
                     <a class="d-block friend__block" href="https://www.protectiondogs.co.uk/" target="_blank">
                         <div class="overlay">
                             <h5>Protection dogs worldwide</h5>
@@ -952,10 +952,9 @@
                         <img src="./img/PDW.png" alt="">
                     </a>
                 </div>
-                <div class="col-sm-6">
+                <div class="col-sm-4 col-md-6">
                     <div class="row">
-
-                        <div class="col-sm-6 col-xs-12 text-center col-sm-offset-3">
+                        <div class="col-sm-12 col-md-6 col-xs-12 text-center col-md-offset-3">
                             <a class="d-block friend__block" href="https://www.facebook.com/Prijateljska-%C5%A1apa-142140716203994/?hc_ref=ARRSPiovyA-bgQlIAUkhFc0_pdzUtgqzxnsnOiwZMbwSp4yJL-ReAzwZ60Vwo_y8M5c&fref=nf&__xts__[0]=68.ARAstJdqbN3-lF6pb58CopjIzRy5m8xcRB1yZZX4gXaL0JPtB6FoSpGyzHXNEdh_sQTIAqupDcFL_h2rcDhzoo5jpAC67ThLqG_GgxQyMCXmfq7KlxXPn7bANfyZwURrNwaOm5bxQURTzq3xCQ1oWv6faJM0tJwa_NkDQrWWUE2q-djFF68o&__tn__=kC-R"
                                 target="_blank">
                                 <div class="overlay">
@@ -966,7 +965,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-3 col-xs-12 text-center pull-right">
+                <div class="col-sm-4 col-md-3 col-xs-12 text-center pull-right">
                     <a class="d-block friend__block" href="http://www.alesvet.com/" target="_blank">
                         <div class="overlay">
                             <h5>Veterinarska ambulanta Alessandra</h5>
@@ -976,7 +975,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-3 col-xs-12 text-center col-sm-offset-2">
+                <div class="col-sm-4 col-md-3 col-xs-12 text-center col-sm-offset-2">
                     <div class="friend__block" data-toggle="modal" data-target="#transport">
                         <div class="overlay">
                             <h5>Transport pasa Boban Janković</h5>
@@ -1003,7 +1002,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-3 col-xs-12 text-center col-sm-offset-2">
+                <div class="col-sm-4 col-md-3 col-xs-12 text-center col-md-offset-2">
                     <div class="friend__block" data-toggle="modal" data-target="#dresura">
                         <div class="overlay">
                             <h5>Dresura pasa Boško Ivkov</h5>
@@ -1043,7 +1042,7 @@
 
         <!-- OVERFLOW -->
         <section class="bottom__padding">
-            <div class="heading__block" id="about__block">
+            <div class="heading__block" id="location__block">
                 <h2 class="section__heading">Gde se nalazimo</h2>
             </div>
             <iframe class="google_map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2824.3553829170273!2d20.211297915215393!3d44.93644297909819!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x475a5eae155df4eb%3A0x64cbb8143fccd6d2!2z0JbQtdC70LXQt9C90LjRh9C60LAgMTA5LCDQndC-0LLQsCDQn9Cw0LfQvtCy0LAgMjIzMzA!5e0!3m2!1ssr!2srs!4v1533991009030"
@@ -1056,6 +1055,45 @@
                     <div class="col-md-12">
                         <div class="heading__block">
                             <h2 class="section__heading">Kontaktirajte nas</h2>
+                        </div>
+                        <div class="row contact-info">
+                            <div class="col-md-6 col-md-offset-3 text-center mb-3">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                                    <g id="_17.talk" data-name="17.talk">
+                                        <path class="cls-1" d="M20,2H4A3,3,0,0,0,1,5V15a3,3,0,0,0,3,3H9v4l4-4h7a3,3,0,0,0,3-3V5A3,3,0,0,0,20,2Z" />
+                                        <line class="cls-1" x1="6" y1="8" x2="13" y2="8" />
+                                        <line class="cls-1" x1="6" y1="12" x2="18" y2="12" />
+                                    </g>
+                                </svg>
+                                <h4>
+                                    <a href="tel:+381 60 7576 622">+381 60 7576 622</a>
+                                </h4>
+                            </div>
+                            <div class="col-md-6 col-md-offset-3 text-center mb-3">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                                    <g id="_38.mail" data-name="38.mail">
+                                        <rect class="cls-1" x="1" y="3" width="22" height="18" rx="3" ry="3" />
+                                        <rect class="cls-2" x="1" y="3" width="22" height="18" rx="3" ry="3" />
+                                        <polyline class="cls-2" points="2 4 12 13 22 4" />
+                                        <line class="cls-2" x1="5" y1="15" x2="9" y2="11" />
+                                        <line class="cls-2" x1="19" y1="15" x2="15" y2="11" />
+                                    </g>
+                                </svg>
+                                <h4>
+                                    <a href="mailto:empireofwisdomfci5042@gmail.com">empireofwisdomfci5042@gmail.com</a>
+                                </h4>
+                            </div>
+                            <div class="col-md-6 col-md-offset-3 text-center mb-3">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                                    <g id="_44.location" data-name="44.location">
+                                        <path class="cls-1" d="M21,10A9,9,0,1,0,8.824,18.413L12,23l3.176-4.587A9,9,0,0,0,21,10Z" />
+                                        <circle class="cls-1" cx="12" cy="10" r="3" />
+                                    </g>
+                                </svg>
+                                <h4>
+                                    <a class="scroll" href="#location__block">Srbija | Nova Pazova | Železnička 109</a>
+                                </h4>
+                            </div>
                         </div>
                         <div class="form">
                             <form method="post" action="contact-page.php" class="ccform">
