--- a/index.html
+++ b/index.html
@@ -5,13 +5,10 @@
     <meta charset="UTF-8" />
     <title>Empire of wisdom</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- CHANGE THIS -->
-    <!-- <meta name="description" content="Welcome to Dental Dream, where we make your dreams come true. Efficient and affordable, we welcome you
-    not only as a client, but also as a friend who came out to visit the beautiful city of Novi Sad." />
-    <meta name="keywords" content="dental, tourism, novi sad, tooth, teeth, implants, full denture, root canal tratment, composite crown, porcelain crown, tooth extraction, porcelain veneers, serbia, dream, services, private, practice"
-    />
-    <meta name="author" content="Aleksandar Beronja" />
-    <meta name="theme-color" content="#D0BB57" /> -->
+    <meta name="description" content="Odgajivačnica EMPIRE OF WISDOM osnovana je 2010. godine pod rednim FCI brojem 5042. Nalazimo se u Srbiji, Novoj Pazovi, na samo 30 km od Beograda i 40 km od Novog Sada." />
+    <meta name="keywords" content="cane, corso, cane corso, nova, pazova, nova pazova, odgajivacnica, pasa, psi, FCI, 5042, rasa, molos, molosi, italija, sicilija" />
+    <meta name="author" content="Empire of wisdom" />
+    <meta name="theme-color" content="#00000" />
     <link rel="apple-touch-icon" sizes="57x57" href="apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="apple-icon-72x72.png">
@@ -35,6 +32,7 @@
 </head>
 
 <body class="body">
+    <a tabindex="0" class="skip-to-main-content scroll" href="#about__block">Idi na sadržaj sajta</a>
     <div class="preloader__container">
         <div class="preloader">
             <div class="circ1"></div>
@@ -328,6 +326,9 @@
                                         data-caption="Irmatas Barrakuda JCHSRB JCHBiH CHSRB CHBIH CHBUL GRAND CHAMPION SERBIA">
                                     </a>
                                     <a href="./img/gallery/female/Iramatas Barracuda/irmatas (14).jpg" data-fancybox="irmatas-barracuda"
+                                        data-caption="Irmatas Barrakuda JCHSRB JCHBiH CHSRB CHBIH CHBUL GRAND CHAMPION SERBIA">
+                                    </a>
+                                    <a href="./img/gallery/female/Iramatas Barracuda/irmatas (15).jpg" data-fancybox="irmatas-barracuda"
                                         data-caption="Irmatas Barrakuda JCHSRB JCHBiH CHSRB CHBIH CHBUL GRAND CHAMPION SERBIA">
                                     </a>
                                 </div>
