--- a/index.html
+++ b/index.html
@@ -315,16 +315,16 @@
                                     <a href="./img/gallery/male/Remus Custodi nos/remus (3).JPG" data-fancybox="remus-empire-of-wisdom"
                                         data-caption="Remus Custodi Nos JCH SRB CHSRB HD-A ED-0">
                                     </a>
-                                    <a href="./img/gallery/male/Remus Custodi nos/remus (4).JPG" data-fancybox="remus-empire-of-wisdom"
+                                    <a href="./img/gallery/male/Remus Custodi nos/remus (4).jpg" data-fancybox="remus-empire-of-wisdom"
                                         data-caption="Remus Custodi Nos JCH SRB CHSRB HD-A ED-0">
                                     </a>
-                                    <a href="./img/gallery/male/Remus Custodi nos/remus (5).JPG" data-fancybox="remus-empire-of-wisdom"
+                                    <a href="./img/gallery/male/Remus Custodi nos/remus (5).jpg" data-fancybox="remus-empire-of-wisdom"
                                         data-caption="Remus Custodi Nos JCH SRB CHSRB HD-A ED-0">
                                     </a>
-                                    <a href="./img/gallery/male/Remus Custodi nos/remus (6).JPG" data-fancybox="remus-empire-of-wisdom"
+                                    <a href="./img/gallery/male/Remus Custodi nos/remus (6).jpg" data-fancybox="remus-empire-of-wisdom"
                                         data-caption="Remus Custodi Nos JCH SRB CHSRB HD-A ED-0">
                                     </a>
-                                    <a href="./img/gallery/male/Remus Custodi nos/remus (7).JPG" data-fancybox="remus-empire-of-wisdom"
+                                    <a href="./img/gallery/male/Remus Custodi nos/remus (7).jpg" data-fancybox="remus-empire-of-wisdom"
                                         data-caption="Remus Custodi Nos JCH SRB CHSRB HD-A ED-0">
                                     </a>
                                     <a href="./img/gallery/male/Remus Custodi nos/remus (8).JPG" data-fancybox="remus-empire-of-wisdom"
@@ -360,25 +360,25 @@
                                     <a href="./img/gallery/female/Iramatas Barracuda/irmatas (8).jpg" data-fancybox="irmatas-barracuda"
                                         data-caption="Irmatas Barrakuda JCHSRB JCHBiH CHSRB CHBIH CHBUL GRAND CHAMPION SERBIA">
                                     </a>
-                                    <a href="./img/gallery/female/Iramatas Barracuda/irmatas (9).jpg" data-fancybox="irmatas-barracuda"
+                                    <a href="./img/gallery/female/Iramatas Barracuda/irmatas (9).JPG" data-fancybox="irmatas-barracuda"
                                         data-caption="Irmatas Barrakuda JCHSRB JCHBiH CHSRB CHBIH CHBUL GRAND CHAMPION SERBIA">
                                     </a>
                                     <a href="./img/gallery/female/Iramatas Barracuda/irmatas (10).jpg" data-fancybox="irmatas-barracuda"
                                         data-caption="Irmatas Barrakuda JCHSRB JCHBiH CHSRB CHBIH CHBUL GRAND CHAMPION SERBIA">
                                     </a>
-                                    <a href="./img/gallery/female/Iramatas Barracuda/irmatas (11).jpg" data-fancybox="irmatas-barracuda"
+                                    <a href="./img/gallery/female/Iramatas Barracuda/irmatas (11).JPG" data-fancybox="irmatas-barracuda"
                                         data-caption="Irmatas Barrakuda JCHSRB JCHBiH CHSRB CHBIH CHBUL GRAND CHAMPION SERBIA">
                                     </a>
-                                    <a href="./img/gallery/female/Iramatas Barracuda/irmatas (12).jpg" data-fancybox="irmatas-barracuda"
+                                    <a href="./img/gallery/female/Iramatas Barracuda/irmatas (12).JPG" data-fancybox="irmatas-barracuda"
                                         data-caption="Irmatas Barrakuda JCHSRB JCHBiH CHSRB CHBIH CHBUL GRAND CHAMPION SERBIA">
                                     </a>
-                                    <a href="./img/gallery/female/Iramatas Barracuda/irmatas (13).jpg" data-fancybox="irmatas-barracuda"
+                                    <a href="./img/gallery/female/Iramatas Barracuda/irmatas (13).JPG" data-fancybox="irmatas-barracuda"
                                         data-caption="Irmatas Barrakuda JCHSRB JCHBiH CHSRB CHBIH CHBUL GRAND CHAMPION SERBIA">
                                     </a>
-                                    <a href="./img/gallery/female/Iramatas Barracuda/irmatas (14).jpg" data-fancybox="irmatas-barracuda"
+                                    <a href="./img/gallery/female/Iramatas Barracuda/irmatas (14).JPG" data-fancybox="irmatas-barracuda"
                                         data-caption="Irmatas Barrakuda JCHSRB JCHBiH CHSRB CHBIH CHBUL GRAND CHAMPION SERBIA">
                                     </a>
-                                    <a href="./img/gallery/female/Iramatas Barracuda/irmatas (15).jpg" data-fancybox="irmatas-barracuda"
+                                    <a href="./img/gallery/female/Iramatas Barracuda/irmatas (15).JPG" data-fancybox="irmatas-barracuda"
                                         data-caption="Irmatas Barrakuda JCHSRB JCHBiH CHSRB CHBIH CHBUL GRAND CHAMPION SERBIA">
                                     </a>
                                 </div>
@@ -475,10 +475,10 @@
                                     <a href="./img/gallery/female/Irmatas Black Mamba For Empire Of Wisdom/irmatas (2).JPG"
                                         data-fancybox="irmatas-black-mamba-for-empire-of-wisdom" data-caption="Irmatas Black Mamba">
                                     </a>
-                                    <a href="./img/gallery/female/Irmatas Black Mamba For Empire Of Wisdom/irmatas (3).JPG"
+                                    <a href="./img/gallery/female/Irmatas Black Mamba For Empire Of Wisdom/irmatas (3).jpg"
                                         data-fancybox="irmatas-black-mamba-for-empire-of-wisdom" data-caption="Irmatas Black Mamba">
                                     </a>
-                                    <a href="./img/gallery/female/Irmatas Black Mamba For Empire Of Wisdom/irmatas (4).JPG"
+                                    <a href="./img/gallery/female/Irmatas Black Mamba For Empire Of Wisdom/irmatas (4).jpg"
                                         data-fancybox="irmatas-black-mamba-for-empire-of-wisdom" data-caption="Irmatas Black Mamba">
                                     </a>
                                     <a href="./img/gallery/female/Irmatas Black Mamba For Empire Of Wisdom/irmatas (5).JPG"
@@ -499,10 +499,10 @@
                                     <a href="./img/gallery/female/Irmatas Black Mamba For Empire Of Wisdom/irmatas (10).JPG"
                                         data-fancybox="irmatas-black-mamba-for-empire-of-wisdom" data-caption="Irmatas Black Mamba">
                                     </a>
-                                    <a href="./img/gallery/female/Irmatas Black Mamba For Empire Of Wisdom/irmatas (11).JPG"
+                                    <a href="./img/gallery/female/Irmatas Black Mamba For Empire Of Wisdom/irmatas (11).jpg"
                                         data-fancybox="irmatas-black-mamba-for-empire-of-wisdom" data-caption="Irmatas Black Mamba">
                                     </a>
-                                    <a href="./img/gallery/female/Irmatas Black Mamba For Empire Of Wisdom/irmatas (12).JPG"
+                                    <a href="./img/gallery/female/Irmatas Black Mamba For Empire Of Wisdom/irmatas (12).jpg"
                                         data-fancybox="irmatas-black-mamba-for-empire-of-wisdom" data-caption="Irmatas Black Mamba">
                                     </a>
                                 </div>
@@ -533,7 +533,7 @@
                                 </a>
                             </div>
                             <div class="grid-item element-item transition female">
-                                <a href="./img/gallery/female/Noa/noa.jpg" data-fancybox="eudora-empire-of-wisdom"
+                                <a href="./img/gallery/female/Noa/noa.jpg" data-fancybox="noa-empire-of-wisdom"
                                     data-caption="Noa Empire of Wisdom - Export Malaysia">
                                     <img src="./img/gallery/female/Noa/thumb/noa.jpg" alt="noa" />
                                     <span class="image-caption">Noa Empire of Wisdom</span>
@@ -883,6 +883,12 @@
                                     <a href="./img/gallery/izlozbe/izlozbe (31).jpg" data-fancybox="izlozbe"
                                         data-caption="Izložba">
                                     </a>
+                                    <a data-fancybox="izlozbe" href="https://www.youtube.com/watch?v=K7bIzBr9x4I"
+                                        data-caption="Izložba"></a>
+                                    </a>
+                                    <a data-fancybox="izlozbe" href="https://www.youtube.com/watch?v=hVQgBAW44wU"
+                                        data-caption="Izložba"></a>
+                                    </a>
                                 </div>
                             </div>
                             <div class="grid-item element-item transition training">
@@ -1009,6 +1015,30 @@
                                         data-caption="Trening"></a>
                                     </a>
                                     <a data-fancybox="training" href="https://www.youtube.com/watch?v=Vh_YcIplJFk"
+                                        data-caption="Trening"></a>
+                                    </a>
+                                    <a data-fancybox="training" href="https://www.youtube.com/watch?v=Kd3DTBvKlrM"
+                                        data-caption="Trening"></a>
+                                    </a>
+                                    <a data-fancybox="training" href="https://www.youtube.com/watch?v=Ym0QWvGwQRU"
+                                        data-caption="Trening"></a>
+                                    </a>
+                                    <a data-fancybox="training" href="https://www.youtube.com/watch?v=PssgHBeEOHQ"
+                                        data-caption="Trening"></a>
+                                    </a>
+                                    <a data-fancybox="training" href="https://www.youtube.com/watch?v=bM6OC-D6Op0"
+                                        data-caption="Trening"></a>
+                                    </a>
+                                    <a data-fancybox="training" href="https://www.youtube.com/watch?v=y3YZZhoBUoM"
+                                        data-caption="Trening"></a>
+                                    </a>
+                                    <a data-fancybox="training" href="https://www.youtube.com/watch?v=2AOzIKKJU3U"
+                                        data-caption="Trening"></a>
+                                    </a>
+                                    <a data-fancybox="training" href="https://www.youtube.com/watch?v=rykXtE_j304"
+                                        data-caption="Trening"></a>
+                                    </a>
+                                    <a data-fancybox="training" href="https://www.youtube.com/watch?v=YzP6o-QVAyE"
                                         data-caption="Trening"></a>
                                     </a>
                                 </div>
