--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 
                     </div>
                     <div class="col-md-12">
-                        <p>U sklopu odgajivačnice nalazi se i pansion za pse. U pansionu se nalazi
+                        <p class="text-center">U sklopu odgajivačnice nalazi se i pansion za pse. U pansionu se nalazi
                             15 spoljnih i komfornih boksova
                             i 15 unutašnjih boksova. Spoljni boksovi su natkriveni sa termo-izolovanim kućicama i
                             pokriveni
