added english version of website

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                             <li>
                                 <i class="sl-flag flag-usa">
                                     <div id="usa"></div>
-                                </i> 
+                                </i>
                                 <span>
                                     <a href="en/">Engleski</a>
                                 </span>
@@ -237,7 +237,9 @@
                         <p class="text-center">U sklopu naše odgajivačnice se nalazi pansion za pse.
                             U pansionu se nalazi 15 spoljnih boksova koji su natkriveni i opremljeni termo-izolovanim
                             kućicama. Takođe se nalazi i 15 unutrašnjih boksova. Unutrašnji boksovi su klimatizovani.
-                            Ceo pansion je opremljen video nadzorom. Dežurni veterinar je na raspolaganju 24/7. Po
+                            Ceo pansion je opremljen video nadzorom. </p>
+                        <p class="text-center">
+                            Dežurni veterinar je na raspolaganju 24/7. Po
                             želji klijenata vršimo pripremu pasa za izložbe (ring dresura), pripremu pasa za BH test,
                             profesionalne obuke poslušnosti i protekcije lica i objekata pod nadzorom licenciranog
                             trenera sa višegodišnjim iskustvom.</p>
