--- a/thank-you-page.html
+++ b/thank-you-page.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sr">
 
 <head>
     <meta charset="UTF-8"/>
-    <title>Dental dream</title>
+    <title>Empire of wisdom</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Dentalni turizam Novi Sad"/>
-    <meta name="keywords" content="dentalni, turizam, novi, sad"/>
+    <meta name="description" content="Empire of wisdom Nova Pazova"/>
+    <meta name="keywords" content="empire of wisdom, nova, pazova, cane, corso, kennel"/>
     <meta name="author" content="Aleksandar Beronja"/>
-    <meta name="theme-color" content="#D0BB57" />
     <link rel="apple-touch-icon" sizes="57x57" href="apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="apple-icon-72x72.png">
@@ -36,7 +35,7 @@
       <p class="thank_you wow fadeInUp">Hvala Vam na poslatom upitu</p>
       <p class="thank_you wow fadeInUp">Odgovorićemo Vam u najkraćem roku</p>
       <div class="thank_you_link wow fadeInUp">
-          <a href="index.html" class="thank_you_a">Nazad na sajt</a>
+          <a href="/" class="thank_you_a">Nazad na sajt</a>
       </div>
   </div>
 
