--- a/en/index.html
+++ b/en/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8" />
     <title>Empire of wisdom</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Odgajivačnica EMPIRE OF WISDOM osnovana je 2010. godine pod rednim FCI brojem 5042. Nalazimo se u Srbiji, Novoj Pazovi, na samo 30 km od Beograda i 40 km od Novog Sada" />
-    <meta name="keywords" content="cane, corso, cane corso, nova, pazova, nova pazova, odgajivacnica, pasa, psi, FCI, 5042, rasa, molos, molosi, italija, sicilija" />
+    <meta name="description" content="Kennel EMPIRE OF WISDOM was founded in 2010. under FCI number 5042. You can find us in Nova Pazova. 30 km from Belgrade and 40 km from Novi Sad" />
+    <meta name="keywords" content="cane, corso, cane corso, nova, pazova, nova pazova, kennel, dog, dogs, FCI, 5042, rasa, molos" />
     <meta name="author" content="Empire of wisdom" />
     <meta name="theme-color" content="#00000" />
     <link rel="apple-touch-icon" sizes="57x57" href="../apple-icon-57x57.png">
