--- a/en/index.html
+++ b/en/index.html
@@ -1213,6 +1213,10 @@
                                     <label>Message</label>
                                     <span class="focus-border"></span>
                                 </div>
+                                <div class="col-12 input__block input-effect checkbox">
+                                    <input type="checkbox" name="cb" id="cb1" />
+                                    <label for="cb1">Confirm your info</label>
+                                </div>
                                 <div class="button__block">
                                     <input class="ccbtn" type="submit" value="SEND" id="submit__button">
                                 </div>
@@ -1235,6 +1239,9 @@
         </div>
         <div class="alert__block alert__block-msg">
             <span>Please enter your message</span>
+        </div>
+        <div class="alert__block alert__block-checkbox">
+            <span>Please confirm your info</span>
         </div>
 
         <div class="go_up">
