--- a/index.html
+++ b/index.html
@@ -1228,6 +1228,10 @@
                                     <label>Vaša poruka</label>
                                     <span class="focus-border"></span>
                                 </div>
+                                <div class="col-12 input__block input-effect checkbox">
+                                    <input type="checkbox" name="cb" id="cb1" />
+                                    <label for="cb1">Potvrda podataka</label>
+                                </div>
                                 <div class="button__block">
                                     <input class="ccbtn" type="submit" value="POŠALJI" id="submit__button">
                                 </div>
@@ -1250,6 +1254,9 @@
         </div>
         <div class="alert__block alert__block-msg">
             <span>Molimo Vas da unesete poruku</span>
+        </div>
+        <div class="alert__block alert__block-checkbox">
+            <span>Molimo Vas da potvrdite podatke</span>
         </div>
 
         <div class="go_up">
